--- a/part2/render_forms/package.json
+++ b/part2/render_forms/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server -p3001 db.json"
+    "server": "json-server -p3001 db.json",
+    "server_ph": "json-server -p3002 db_phonebook.json"
   },
   "eslintConfig": {
     "extends": "react-app"
